--- a/06-Code/Project/nbproject/project.properties
+++ b/06-Code/Project/nbproject/project.properties
@@ -29,7 +29,7 @@ dist.jar=${dist.dir}/Project.jar
 dist.javadoc.dir=${dist.dir}/javadoc
 endorsed.classpath=
 excludes=
-file.reference.FileManager.jar=../../../../JAVA- GENERAL/UseOfFileManager/lib/FileManager.jar
+file.reference.FileManager.jar=../FileManager/FileManager/dist/FileManager.jar
 includes=**
 jar.compress=false
 javac.classpath=\
