--- a/06-Code/Project/nbproject/project.properties
+++ b/06-Code/Project/nbproject/project.properties
@@ -30,10 +30,14 @@ dist.javadoc.dir=${dist.dir}/javadoc
 endorsed.classpath=
 excludes=
 file.reference.FileManager.jar=../FileManager/FileManager/dist/FileManager.jar
+file.reference.gson-2.8.6.jar=C:\\Users\\wilda\\Desktop\\gson-2.8.6.jar
+file.reference.json-simple-1.1.jar=C:\\Users\\wilda\\Desktop\\json-simple-1.1.jar
 includes=**
 jar.compress=false
 javac.classpath=\
-    ${file.reference.FileManager.jar}
+    ${file.reference.FileManager.jar}:\
+    ${file.reference.gson-2.8.6.jar}:\
+    ${file.reference.json-simple-1.1.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
