--- a/06-Code/Project/nbproject/project.properties
+++ b/06-Code/Project/nbproject/project.properties
@@ -32,12 +32,14 @@ excludes=
 file.reference.FileManager.jar=../FileManager/FileManager/dist/FileManager.jar
 file.reference.gson-2.8.6.jar=C:\\Users\\wilda\\Desktop\\gson-2.8.6.jar
 file.reference.json-simple-1.1.jar=C:\\Users\\wilda\\Desktop\\json-simple-1.1.jar
+file.reference.json-simple-1.1.jar-1=C:\\Users\\admin\\Desktop\\json-simple-1.1.jar
 includes=**
 jar.compress=false
 javac.classpath=\
     ${file.reference.FileManager.jar}:\
     ${file.reference.gson-2.8.6.jar}:\
-    ${file.reference.json-simple-1.1.jar}
+    ${file.reference.json-simple-1.1.jar}:\
+    ${file.reference.json-simple-1.1.jar-1}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
