--- a/06-Code/Unit 2/Liquor Store Project VS 2/nbproject/project.properties
+++ b/06-Code/Unit 2/Liquor Store Project VS 2/nbproject/project.properties
@@ -1,9 +1,10 @@
 annotation.processing.enabled=true
 annotation.processing.enabled.in.editor=false
-annotation.processing.processor.options=
 annotation.processing.processors.list=
 annotation.processing.run.all.processors=true
 annotation.processing.source.output=${build.generated.sources.dir}/ap-source-output
+application.title=Liquor Store Project VS 2
+application.vendor=hp
 build.classes.dir=${build.dir}/classes
 build.classes.excludes=**/*.java,**/*.form
 # This directory is removed when the project is cleaned:
@@ -26,11 +27,14 @@ dist.archive.excludes=
 dist.dir=dist
 dist.jar=${dist.dir}/Liquor_Store_Project_VS_2.jar
 dist.javadoc.dir=${dist.dir}/javadoc
+endorsed.classpath=
 excludes=
+file.reference.gson-2.8.6.jar=C:\\Users\\hp\\Downloads\\25GUIProject\\libs\\gson-2.8.6.jar
 includes=**
 jar.compress=false
 javac.classpath=\
-    ${libs.absolutelayout.classpath}
+    ${libs.absolutelayout.classpath}:\
+    ${file.reference.gson-2.8.6.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
