Implements JSON for the class order

--- a/.gitignore
+++ b/.gitignore
@@ -27,3 +27,4 @@
 /06-Code/Unit 2/Borradores/CodigoBorrador/Project/nbproject/private/
 /06-Code/Unit 2/Borradores/ManejoDeJSON/build/
 /06-Code/Unit 2/Borradores/ManejoDeJSON/nbproject/private/
+/06-Code/Unit 2/Liquor Store Project VS 2/build/
