--- a/06-Code/Unit 2/Liquor Store Project VS 2/nbproject/project.properties
+++ b/06-Code/Unit 2/Liquor Store Project VS 2/nbproject/project.properties
@@ -29,12 +29,14 @@ dist.jar=${dist.dir}/Liquor_Store_Project_VS_2.jar
 dist.javadoc.dir=${dist.dir}/javadoc
 endorsed.classpath=
 excludes=
-file.reference.gson-2.8.6.jar=C:\\Users\\hp\\Downloads\\25GUIProject\\libs\\gson-2.8.6.jar
+file.reference.gson-2.8.6.jar=C:\\Users\\wilda\\Desktop\\POO6382_ToapantaW\\Librer\u00edasJSON\\gson-2.8.6.jar
+file.reference.json-simple-1.1.jar=C:\\Users\\wilda\\Desktop\\POO6382_ToapantaW\\Librer\u00edasJSON\\json-simple-1.1.jar
 includes=**
 jar.compress=false
 javac.classpath=\
     ${libs.absolutelayout.classpath}:\
-    ${file.reference.gson-2.8.6.jar}
+    ${file.reference.gson-2.8.6.jar}:\
+    ${file.reference.json-simple-1.1.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
