--- a/06-Code/Unit 2/Liquor Store Project VS 2/nbproject/project.properties
+++ b/06-Code/Unit 2/Liquor Store Project VS 2/nbproject/project.properties
@@ -61,7 +61,7 @@ javadoc.splitindex=true
 javadoc.use=true
 javadoc.version=false
 javadoc.windowtitle=
-main.class=ec.edu.espe.liquorStore.view.LiquorStoreProjectVS2
+main.class=ec.edu.espe.liquorStore.view.FrmMain
 manifest.file=manifest.mf
 meta.inf.dir=${src.dir}/META-INF
 mkdist.disabled=false
