--- a/06-Code/Unit 2/Liquor Store Project VS 2/nbproject/project.properties
+++ b/06-Code/Unit 2/Liquor Store Project VS 2/nbproject/project.properties
@@ -29,8 +29,8 @@ dist.jar=${dist.dir}/Liquor_Store_Project_VS_2.jar
 dist.javadoc.dir=${dist.dir}/javadoc
 endorsed.classpath=
 excludes=
-file.reference.gson-2.8.6.jar=C:\\Users\\wilda\\Desktop\\POO6382_ToapantaW\\Librer\u00edasJSON\\gson-2.8.6.jar
-file.reference.json-simple-1.1.jar=C:\\Users\\wilda\\Desktop\\POO6382_ToapantaW\\Librer\u00edasJSON\\json-simple-1.1.jar
+file.reference.gson-2.8.6.jar=lib/gson-2.8.6.jar
+file.reference.json-simple-1.1.jar=lib/json-simple-1.1.jar
 includes=**
 jar.compress=false
 javac.classpath=\
@@ -61,7 +61,7 @@ javadoc.splitindex=true
 javadoc.use=true
 javadoc.version=false
 javadoc.windowtitle=
-main.class=ec.edu.espe.liquorStore.view.FrmMenu
+main.class=ec.edu.espe.liquorStore.view.FrmMain
 manifest.file=manifest.mf
 meta.inf.dir=${src.dir}/META-INF
 mkdist.disabled=false
