--- a/.gitignore
+++ b/.gitignore
@@ -28,3 +28,4 @@
 /06-Code/Unit 2/Borradores/ManejoDeJSON/build/
 /06-Code/Unit 2/Borradores/ManejoDeJSON/nbproject/private/
 /06-Code/Unit 2/Liquor Store Project VS 2/build/
+/06-Code/Unit 2/Liquor Store Project VS 2/dist/
