--- a/06-Code/Borradores/29MongoDB/nbproject/project.properties
+++ b/06-Code/Borradores/29MongoDB/nbproject/project.properties
@@ -33,7 +33,8 @@ file.reference.mongo-2.9.3.jar=libs/mongo-2.9.3.jar
 includes=**
 jar.compress=false
 javac.classpath=\
-    ${file.reference.mongo-2.9.3.jar}
+    ${file.reference.mongo-2.9.3.jar}:\
+    ${libs.absolutelayout.classpath}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
